kubernetes/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cosmocats-deployment
  labels:
    app: cosmocats
    tier: mixed
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cosmocats
      tier: mixed
  template:
    metadata:
      labels:
        app: cosmocats
        tier: mixed
    spec:
      containers:
      - name: cosmocats
        image: cloudnativegbb.azurecr.io/cosmocats
        ports:
        - containerPort: 80 # {COSMOCATS_LISTENING_PORT}
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
