kubernetes/services.yml
apiVersion: v1
kind: Service
metadata:
  name: cosmocats-service
  labels:
    app: cosmocats
    tier: mixed
spec:
  selector:
    app: cosmocats
    tier: mixed
  ports:
    - protocol: TCP
      port: 80 # {COSMOCATS_LISTENING_PORT}
  type: ClusterIP
